--- a/src/Components/Navbar/TabNav.css
+++ b/src/Components/Navbar/TabNav.css
@@ -1,18 +1,23 @@
+@font-face{
+    font-family: Mermaid;
+    src: url("../../FreesoulDocs/tipografias/Mermaid1001.ttf") format("opentype");
+}
+
 .tabcss{
     background-color: #bae0e3;
 }
 
 .nav-link {
     color: #4d6ab2;
-    font-size: 30px;
+    font-size: 40px;
     margin-left: 20px;
     margin-right: 20px;
-    font-family: m
+    font-family: Mermaid;
 }
 
 .active{
     color: #4d6ab2;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .topBar{
@@ -26,4 +31,21 @@
     text-decoration: none;
     float: right;
     margin-left: 30px;
+}
+
+.logo{
+    width: fit-content;
+    height: 230px;
+}
+
+.icon1{
+    position: absolute;
+    top: 15%;
+    left: 83%;
+}
+
+.icon2{
+    position: absolute;
+    top: 15%;
+    left: 90%;
 }
