--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -1,7 +1,7 @@
 .container-slider {
   max-width: 1300px;
   height: 800px;
-  margin: 50px auto 0;
+  margin: 0 auto 0;
   position: relative;
   overflow: hidden;
   border-radius: 20px;
