--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -23,7 +23,7 @@
 .slide img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit:fill;
 }
 .active-anim {
   opacity: 1;
@@ -33,8 +33,8 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background: #f1f1f1;
-  border: 1px solid rgba(34, 34, 34, 0.287);
+  background: transparent;
+  border: none;
   position: absolute;
   display: flex;
   justify-content: center;
@@ -43,8 +43,8 @@
 }
 
 .btn-slide img {
-  width: 25px;
-  height: 25px;
+  width: 60px;
+  height: 60px;
   pointer-events: none;
 }
 .prev {
